master

2.24.4
- ahokadesuka
  Scroll back up when unexpanding images.
- e000
  Prevent absurd cooldown durations.
- Mayhem
  Better image expanding reload, should fool CloudFlare's cache.
- seaweed
  Prevent the hover image to be partially masked by the url preview/status bar.

2.24.3
- Mayhem
  Set image limit in Thread Stats to 252 for /a/ and /v/, default to 152.
  Fix 4chan X in locked threads.

2.24.2
- mayhem
  fix options popping up everytime a page loads

2.24.1
- mayhem
  fix Open thread in new tab keybind for Safari with Ninjakit
  fix Index/Reply Navigation working in both cases when only one is enabled

2.24.0
- mayhem
  redirect 404'd pictures to archives when possible
  new keybind to open the options: ctrl+o
  the unread count will decrease when inlining quotes of unread posts
  the report button can open multiple popups again
  add omploader to the list of optional flavors (http://ompldr.org/upload?url1=)
  update archive redirections, add /lit/ and /u/
  fit horizontally for Image Hover

2.23.7
- mayhem
  update archive redirections

2.23.6
- mayhem
  fix empty sauce or all flavors commented out from breaking 4chan X

2.23.5
- mayhem
  increase the thread updater retry timeout limit at each retry
  fix selection to quote when selecting started from the end of a line on Firefox

2.23.4
- mayhem
  thread updater network optimization
  prevent regexp errors with the filter

2.23.3
- mayhem
  fix 2.32.2 regression duplicating new posts in rare cases

2.23.2
- mayhem
  hide original posts from inlined backlinks - optional
  enable autoposting when submitting a captcha while on cooldown
  fix caret position when quoting on Opera

2.23.1
- mayhem
  fix favicon updating on Opera
  fix compatibility with Tampermonkey

2.23.0
- mayhem
  multiple unread favicons to chose in the options
  quotes are now inserted at the caret position in the QR
  quotes also replace the text selection in the QR