@@ -1,4 +1,6 @@
 master
+- Mayhem
+  Index Navigation and the See next/previous thread keybinds will not cycle through board pages anymore.
 
 2.24.4
 - ahokadesuka
